refactor: add significant names according to rule 3.2 in html-and-css.md

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <body>
   <div class="header">
     <img src="./eisenhower-matrix.jpg">
-    <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details</a>
+    <a class="header-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details</a>
   </div>
-  <div class="centered-main-page-element">
-    <p id="topSectionForAddingElementToList">
+  <div class="wrapper">
+    <p id="new-task-title">
       <label for="new-task">Add Item</label>
     <div class="task-row-wrapper">
       <input id="new-task" class="task" type="text">
@@ -37,7 +37,7 @@
       <li class="edit-mode">
         <input type="checkbox">
         <label class="task">Go Shopping</label>
-        <input type="text" value="Go Shopping" class="task">
+        <input class="task" type="text" value="Go Shopping">
         <button class="edit">Save</button>
         <button class="delete">
           <img src="./remove.svg">
