--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <p id="new-task-title">
       <label for="new-task">Add Item</label>
     <div class="task-row-wrapper">
-      <input id="new-task" class="task" type="text">
+      <input id="new-task" class="task-title" type="text">
       <button>Add</button>
     </div>
     </p>
@@ -27,19 +27,19 @@
     <ul id="incompleteTasks">
       <li>
         <input type="checkbox">
-        <label class="task">Pay Bills</label>
+        <label class="task-title">Pay Bills</label>
         <input type="text">
-        <button class="edit">Edit</button>
-        <button class="delete">
+        <button class="task-edit">Edit</button>
+        <button class="task-delete">
           <img src="./remove.svg">
         </button>
       </li>
       <li class="edit-mode">
         <input type="checkbox">
-        <label class="task">Go Shopping</label>
-        <input class="task" type="text" value="Go Shopping">
-        <button class="edit">Save</button>
-        <button class="delete">
+        <label class="task-title">Go Shopping</label>
+        <input class="task-title" type="text" value="Go Shopping">
+        <button class="task-edit">Save</button>
+        <button class="task-delete">
           <img src="./remove.svg">
         </button>
       </li>
@@ -48,10 +48,10 @@
     <ul id="completed-tasks">
       <li>
         <input type="checkbox" checked>
-        <label class="task">See the Doctor</label>
-        <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete">
+        <label class="task-title">See the Doctor</label>
+        <input class="task-title" type="text">
+        <button class="task-edit">Edit</button>
+        <button class="task-delete">
           <img src="./remove.svg">
         </button>
       </li>
