refactor: change tag selectors according to rule 3.4 in html-and-css.md

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <div class="header">
-    <img src="./eisenhower-matrix.jpg">
+    <img class="header-img" src="./eisenhower-matrix.jpg">
     <a class="header-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details</a>
   </div>
   <div class="wrapper">
@@ -29,8 +29,8 @@
         <input type="checkbox">
         <label class="task-title">Pay Bills</label>
         <input type="text">
-        <button class="task-edit">Edit</button>
-        <button class="task-delete">
+        <button class="edit">Edit</button>
+        <button class="delete">
           <img src="./remove.svg">
         </button>
       </li>
@@ -38,8 +38,8 @@
         <input type="checkbox">
         <label class="task-title">Go Shopping</label>
         <input class="task-title" type="text" value="Go Shopping">
-        <button class="task-edit">Save</button>
-        <button class="task-delete">
+        <button class="edit">Save</button>
+        <button class="delete">
           <img src="./remove.svg">
         </button>
       </li>
@@ -50,8 +50,8 @@
         <input type="checkbox" checked>
         <label class="task-title">See the Doctor</label>
         <input class="task-title" type="text">
-        <button class="task-edit">Edit</button>
-        <button class="task-delete">
+        <button class="edit">Edit</button>
+        <button class="delete">
           <img src="./remove.svg">
         </button>
       </li>
