refactor: add semantic tags according to advance rules 1.1 in html-and-css.md

--- a/index.html
+++ b/index.html
@@ -16,46 +16,54 @@
     <a class="header-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details</a>
   </div>
   <div class="wrapper">
-    <p id="new-task-title">
+
+    <article id="new-task-title">
       <label for="new-task">Add Item</label>
-    <div class="task-row-wrapper">
-      <input id="new-task" class="task-title" type="text">
-      <button>Add</button>
-    </div>
-    </p>
-    <h3>Todo</h3>
-    <ul id="incompleteTasks">
-      <li>
-        <input type="checkbox">
-        <label class="task-title">Pay Bills</label>
-        <input type="text">
-        <button class="edit">Edit</button>
-        <button class="delete">
-          <img src="./remove.svg">
-        </button>
-      </li>
-      <li class="edit-mode">
-        <input type="checkbox">
-        <label class="task-title">Go Shopping</label>
-        <input class="task-title" type="text" value="Go Shopping">
-        <button class="edit">Save</button>
-        <button class="delete">
-          <img src="./remove.svg">
-        </button>
-      </li>
-    </ul>
-    <h3>Completed</h3>
-    <ul id="completed-tasks">
-      <li>
-        <input type="checkbox" checked>
-        <label class="task-title">See the Doctor</label>
-        <input class="task-title" type="text">
-        <button class="edit">Edit</button>
-        <button class="delete">
-          <img src="./remove.svg">
-        </button>
-      </li>
-    </ul>
+      <section class="task-row-wrapper">
+        <input id="new-task" class="task-title" type="text">
+        <button>Add</button>
+      </section>
+    </article>
+
+    <article>
+      <h3>Todo</h3>
+      <ul id="incompleteTasks">
+        <li>
+          <input type="checkbox">
+          <label class="task-title">Pay Bills</label>
+          <input type="text">
+          <button class="edit">Edit</button>
+          <button class="delete">
+            <img src="./remove.svg">
+          </button>
+        </li>
+        <li class="edit-mode">
+          <input type="checkbox">
+          <label class="task-title">Go Shopping</label>
+          <input class="task-title" type="text" value="Go Shopping">
+          <button class="edit">Save</button>
+          <button class="delete">
+            <img src="./remove.svg">
+          </button>
+        </li>
+      </ul>
+    </article>
+
+    <article>
+      <h3>Completed</h3>
+      <ul id="completed-tasks">
+        <li>
+          <input type="checkbox" checked>
+          <label class="task-title">See the Doctor</label>
+          <input class="task-title" type="text">
+          <button class="edit">Edit</button>
+          <button class="delete">
+            <img src="./remove.svg">
+          </button>
+        </li>
+      </ul>
+    </article>
+
   </div>
 
   <script src="app.js"></script>
