--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <div class="header">
-    <img class="header-img" src="./eisenhower-matrix.jpg">
+    <img class="header-img" src="./eisenhower-matrix.jpg" alt="header-img">
     <a class="header-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details</a>
   </div>
   <div class="wrapper">
@@ -34,7 +34,7 @@
           <input type="text">
           <button class="edit">Edit</button>
           <button class="delete">
-            <img src="./remove.svg">
+            <img src="./remove.svg" alt="button-remove-svg">
           </button>
         </li>
         <li class="edit-mode">
@@ -43,7 +43,7 @@
           <input class="task-title" type="text" value="Go Shopping">
           <button class="edit">Save</button>
           <button class="delete">
-            <img src="./remove.svg">
+            <img src="./remove.svg" alt="button-remove-svg">
           </button>
         </li>
       </ul>
@@ -58,7 +58,7 @@
           <input class="task-title" type="text">
           <button class="edit">Edit</button>
           <button class="delete">
-            <img src="./remove.svg">
+            <img src="./remove.svg" alt="button-remove-svg">
           </button>
         </li>
       </ul>
