--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 
 <body>
   <div class="header">
-    <img class="header-img" src="./eisenhower-matrix.jpg" alt="header-img">
-    <a class="header-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details</a>
+    <img class="header__img" src="./eisenhower-matrix.jpg" alt="header-img">
+    <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details</a>
   </div>
+
   <div class="wrapper">
 
     <article id="new-task-title">
