refactor: change class names BEM advance according to rule 2.1 in html-and-css.md

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
   <div class="wrapper">
 
-    <article id="new-task-title">
-      <label for="new-task">Add Item</label>
-      <section class="task-row-wrapper">
-        <input id="new-task" class="task-title" type="text">
+    <article class="new-task" id="new-task-title">
+      <label class="new-task__label" for="new-task">Add Item</label>
+      <section class="new-task-wrapper">
+        <input class="task-title" id="new-task" type="text">
         <button>Add</button>
       </section>
     </article>
